plugins {
    id 'eclipse'
    id 'idea'
    id 'java-library'
    id 'net.neoforged.moddev' version '2.0.141'
}

group = 'org.lovetropics'
base {
    archivesName = 'LTMinigames'
}

ext.buildnumber = 0
project.buildnumber = System.getenv('BUILD_NUMBER') ?: 'custom'

if (System.getenv('GHA_RELEASE_WORKFLOW')) {
    version = "${mod_version}"
} else if (System.getenv('GITHUB_RUN_NUMBER')) {
    project.buildnumber = System.getenv('GITHUB_RUN_NUMBER')
    version = "${mod_version}-${release_type}+${buildnumber}-gha"
} else {
    project.buildnumber = System.getenv('BUILD_NUMBER') ?: 'custom'
    version = "${mod_version}-${release_type}+${buildnumber}"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

sourceSets.main.resources {
    srcDir 'src/generated/resources'
    exclude 'testing/**'
}
sourceSets.test.resources {
    srcDir 'src/generated/resources'
    include 'testing/**'
    include 'data/ltminigames/structure/**'
}

neoForge {
    version = project.neo_version

    addModdingDependenciesTo sourceSets.test

    mods {
        "${project.mod_id}" {
            sourceSet sourceSets.main
        }
        "${project.mod_id}_test" {
            sourceSet sourceSets.main
            sourceSet sourceSets.test
        }
    }

    runs {
        client {
            client()
            loadedMods = [mods."${mod_id}"]

            programArguments.addAll '--username', 'Dev###'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            loadedMods = [mods."${mod_id}"]

            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            sourceSet = sourceSets.test
            loadedMods = [mods."${mod_id}_test"]

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            clientData()
            loadedMods = [mods."${mod_id}_test"]

            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            logLevel = org.slf4j.event.Level.INFO
            ideName = project.name + " - " + ideName.get()
            jvmArgument("-Dmixin.debug.export=true")
        }
    }
}

configurations {
    modImpl
    implementation.extendsFrom(modImpl)
    testImplementation.extendsFrom(modImpl)

    modRuntime
    runtimeOnly.extendsFrom(modRuntime)
    testRuntimeOnly.extendsFrom(modRuntime)

    modCompile
    compileOnly.extendsFrom(modCompile)
    testCompileOnly.extendsFrom(modCompile)
}

repositories {
    maven {
        url = 'https://maven.gegy.dev/releases'
        content {
            includeGroup 'org.lovetropics'
            includeGroup 'com.tterrag.registrate'
            includeGroup 'eu.pb4'
        }
    }
    maven {
        url = 'https://api.modrinth.com/maven'
        content {
            includeGroup 'maven.modrinth'
        }
    }
    maven {
        name = 'CurseMaven'
        url = 'https://www.cursemaven.com'
        content {
            includeGroup('curse.maven')
        }
    }
}

dependencies {
    runtimeOnly 'maven.modrinth:tropicraft:9.11.0+26.2'

    // TODO: HACK - We get Registrate at runtime through JarJar from Tropicraft. We should rather prefer to depend on the slim jar.
    jarJar(compileOnly("com.tterrag.registrate:Registrate:MC26.2-${registrate_version}") {
        version {
            strictly "[MC26.2-${registrate_version},MC26.3)"
            prefer "MC26.2-${registrate_version}"
        }
    })

    jarJar(implementation("org.lovetropics:LTLib:$ltlib_version"))
//    runtimeOnly("org.lovetropics:LTLib:$ltlib_version")

    runtimeOnly "org.lovetropics:LTExtras:$ltextras_version"

    jarJar(compileOnly("org.lovetropics:peekaboo-api:$peekaboo_version"))
    runtimeOnly("org.lovetropics:peekaboo:$peekaboo_version") {
        transitive = false
    }

    runtimeOnly "org.lovetropics:lt-multimedia:$multimedia_version"

    testImplementation platform("org.junit:junit-bom:5.7.0")
    testImplementation "org.junit.jupiter:junit-jupiter"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

tasks.register('sourceJar', Jar) {
    dependsOn classes
    archiveClassifier = 'sources'
    from sourceSets.main.java
}

var generateModMetadata = tasks.register('generateModMetadata', ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_version            : mod_version,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from 'src/main/templates'
    into 'build/generated/sources/modMetadata'
}
sourceSets.main.resources.srcDir generateModMetadata

neoForge.ideSyncTask generateModMetadata

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs << "-Xmaxerrs" << "100000"
}

tasks.withType(ProcessResources).configureEach {
    outputs.upToDateWhen { false }
}
